--- a/ssafit_project_이구범_전민정/pom.xml
+++ b/ssafit_project_이구범_전민정/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<!-- jwt 사용 -->
+		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt</artifactId>
+    		<version>0.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
