--- a/ssafit_project_이구범_전민정/src/main/resources/application.properties
+++ b/ssafit_project_이구범_전민정/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.datasource.password=ssafy
 # mybatis
 mybatis.mapper-locations=classpath*:mappers/*.xml
 mybatis.type-aliases-package=com.ssafy.ssafit.model.dto
+
+
+# logging
+logging.level.com.ssafy.image=debug
+
+server.port=9999
+
+spring.servlet.multipart.maxFileSize=50MB
+spring.servlet.multipart.maxRequestSize=50MB
+ 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
